@@ -1,5 +1,9 @@
 2007-10-05  Ulrich Drepper  <drepper@redhat.com>
 
+	[BZ #5112]
+	* nscd/connections.c (restart): Don't resync if database is
+	disabled.  Patch mostly by Brian De Wolf <bldewolf@csupomona.edu>.
+
 	* sysdeps/gnu/netinet/tcp.h: Define TCP_MD5SIG, TCP_MD5SIG_MAXKEYLEN,
 	struct tcp_md5sig.  Extend struct tcp_info according to recent kernels.
 
